WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49296
FileSystem: Fix a link error for non-chromium WebKit build
https://bugs.webkit.org/show_bug.cgi?id=49296
Summary
FileSystem: Fix a link error for non-chromium WebKit build
Kavita Kanetkar
Reported
2010-11-09 19:06:58 PST
WebKit build with --file-system gets link error.
Attachments
patch
(7.34 KB, patch)
2010-11-09 19:51 PST
,
Kavita Kanetkar
no flags
Details
Formatted Diff
Diff
patch
(7.27 KB, patch)
2010-11-10 10:35 PST
,
Kavita Kanetkar
no flags
Details
Formatted Diff
Diff
patch
(7.49 KB, patch)
2010-11-11 14:59 PST
,
Kavita Kanetkar
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Kavita Kanetkar
Comment 1
2010-11-09 19:51:41 PST
Created
attachment 73452
[details]
patch
Kinuko Yasuda
Comment 2
2010-11-09 21:28:06 PST
Comment on
attachment 73452
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=73452&action=review
> WebCore/inspector/InspectorFileSystemAgent.cpp:123 > + // FIXME: Remove guard when file system is supported for non-chromium platforms.
This comment does not look really accurate; must be like 'when revealFolderInOS is implemented on non-chromium platforms'.
> WebCore/inspector/InspectorFileSystemAgent.cpp:124 > WebCore::revealFolderInOS(path);
I don't think you need WebCore:: here. (Aren't we in WebCore namespace?)
Kavita Kanetkar
Comment 3
2010-11-10 10:35:11 PST
Created
attachment 73506
[details]
patch The WebCore:: is for resolving scope, since InspectorFileSystemAgent's method name is the same.
Kinuko Yasuda
Comment 4
2010-11-10 10:38:07 PST
Comment on
attachment 73506
[details]
patch lgtm!
Jian Li
Comment 5
2010-11-10 20:07:35 PST
Comment on
attachment 73506
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=73506&action=review
Looks good except the minor issue. Please fix it before you land the patch.
> WebCore/inspector/InspectorFileSystemAgent.cpp:127 > +void InspectorFileSystemAgent::revealFolderInOS(const String&) { }
Please add "notImplemented();".
Kavita Kanetkar
Comment 6
2010-11-11 14:59:19 PST
Created
attachment 73668
[details]
patch I am not a committer so it needs to go through cq. Please take a look. Thanks.
Dumitru Daniliuc
Comment 7
2010-11-11 15:21:09 PST
Comment on
attachment 73668
[details]
patch rs=me, based on jian's and kinuko's reviews.
Eric Seidel (no email)
Comment 8
2010-11-11 16:22:13 PST
Comment on
attachment 73506
[details]
patch Cleared Jian Li's review+ from obsolete
attachment 73506
[details]
so that this bug does not appear in
http://webkit.org/pending-commit
.
WebKit Commit Bot
Comment 9
2010-11-11 21:38:43 PST
Comment on
attachment 73668
[details]
patch Clearing flags on attachment: 73668 Committed
r71885
: <
http://trac.webkit.org/changeset/71885
>
WebKit Commit Bot
Comment 10
2010-11-11 21:38:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug