WebCore/inspector/InspectorFileSystemAgent.cpp
@@ -42,6 +42,7 @@
 #include "InspectorController.h"
 #include "InspectorFrontend.h"
 #include "LocalFileSystem.h"
+#include "NotImplemented.h"
 #include "Page.h"
 #include "RuntimeEnabledFeatures.h"
 
@@ -66,7 +67,7 @@ public:
         ASSERT_NOT_REACHED();
     }
 
-    void didOpenFileSystem(const String& name, PassOwnPtr<AsyncFileSystem> fileSystem)
+    void didOpenFileSystem(const String&, PassOwnPtr<AsyncFileSystem> fileSystem)
     {
         // Agent will be alive even if InspectorController is destroyed until callback is run.
         m_agent->didGetFileSystemPath(fileSystem->root(), m_type, m_origin);
@@ -77,22 +78,22 @@ public:
         ASSERT_NOT_REACHED();
     }
 
-    void didReadDirectoryEntry(const String& name, bool isDirectory)
+    void didReadDirectoryEntry(const String&, bool)
     {
         ASSERT_NOT_REACHED();
     }
 
-    void didReadDirectoryEntries(bool hasMore)
+    void didReadDirectoryEntries(bool)
     {
         ASSERT_NOT_REACHED();
     }
 
-    void didCreateFileWriter(PassOwnPtr<AsyncFileWriter> writer, long long length)
+    void didCreateFileWriter(PassOwnPtr<AsyncFileWriter>, long long)
     {
         ASSERT_NOT_REACHED();
     }
     
-    void didFail(int code)
+    void didFail(int)
     {
         // FIXME: Is it useful to give back the code to Inspector UI?
         m_agent->didGetFileSystemError(m_type, m_origin);
@@ -117,10 +118,18 @@ void InspectorFileSystemAgent::stop()
     m_inspectorController = 0;
 }
 
+#if PLATFORM(CHROMIUM)
 void InspectorFileSystemAgent::revealFolderInOS(const String& path)
 {
+    // FIXME: Remove guard when revealFolderInOS is implemented for non-chromium platforms.
     WebCore::revealFolderInOS(path);
 }
+#else
+void InspectorFileSystemAgent::revealFolderInOS(const String&)
+{
+    notImplemented();
+}
+#endif
 
 void InspectorFileSystemAgent::getFileSystemPathAsync(unsigned int type, const String& origin)
 {
